--- a/CourseRegistrationSystem/Views/Class/RegisterClassForHRResult.cshtml
+++ b/CourseRegistrationSystem/Views/Class/RegisterClassForHRResult.cshtml
@@ -6,10 +6,10 @@
 }
 
 <h2>RegisterClassForHRResult</h2>
-
+<hr />
 <div>
     <h4>Successful registration</h4>
-    <hr />
+
     @foreach (var item in Model)
     {
 
@@ -27,10 +27,53 @@
     }
 </div>
 
+<dl class="dl-horizontal">
+
+    <dt>
+        @Html.DisplayName("Address")
+    </dt>
+
+    <dd>
+        @Html.Encode(ViewBag.Address)
+    </dd>
+
+    <dt>
+        @Html.DisplayName("PersonName")
+    </dt>
+
+    <dd>
+        @Html.Encode(ViewBag.PersonName)
+    </dd>
+
+    <dt>
+        @Html.DisplayName("Country")
+    </dt>
+
+    <dd>
+        @Html.Encode(ViewBag.Country)
+    </dd>
+
+    <dt>
+        @Html.DisplayName("PostalCode")
+    </dt>
+
+    <dd>
+        @Html.Encode(ViewBag.PostalCode)
+    </dd>
+
+    <dt>
+        @Html.DisplayName("Status")
+    </dt>
+
+    <dd>
+        @Html.Display("Pending")
+    </dd> 
+</dl>
+
 @if (ViewBag.fList.Count != 0)
 {
-    <div>
-        <h4>Failed registration</h4>
+    <div class="alert alert-danger" role="alert">
+        <h4>There are participants who failed registration or already had registered. If any mistake, please try again for them or contact us directly.</h4>
         <hr />
         @foreach (Registration item in ViewBag.fList)
         {
@@ -49,66 +92,6 @@
         }
     </div>
 }
-
-
-<dl class="dl-horizontal">
-
-    <dt>
-        @Html.DisplayNameFor(model => model.First().BillingAddress)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.First().BillingAddress)
-    </dd>
-
-    <dt>
-        @Html.DisplayNameFor(model => model.First().BillingPersonName)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.First().BillingPersonName)
-    </dd>
-
-    <dt>
-        @Html.DisplayNameFor(model => model.First().BillingAddressCountry)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.First().BillingAddressCountry)
-    </dd>
-
-    <dt>
-        @Html.DisplayNameFor(model => model.First().BillingAddressPostalCode)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.First().BillingAddressPostalCode)
-    </dd>
-
-    <dt>
-        @Html.DisplayNameFor(model => model.First().Status)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.First().Status)
-    </dd>
-
-    <dt>
-        @Html.DisplayNameFor(model => model.First().CreateDate)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.First().CreateDate)
-    </dd>
-
-    <dt>
-        @Html.DisplayNameFor(model => model.First().Timestamp)
-    </dt>
-
-    <dd>
-        @Html.DisplayFor(model => model.First().Timestamp)
-    </dd>
-</dl>
 
 <p>
     @Html.ActionLink("Back to List", "Index")
