--- a/CourseRegistrationSystem/Views/Course/SearchResult.cshtml
+++ b/CourseRegistrationSystem/Views/Course/SearchResult.cshtml
@@ -6,11 +6,17 @@
 
 <h2>Search <i><small>@Model.Count() results</small></i></h2>
 
-<hr />
+@if (Model.Count() == 0)
+{
+    <hr />
+    <p><i>Sorry, there is no any courses referred to @ViewBag.Search</i></p>
+}
+
 @foreach (var item in Model)
 {
     //if (item.enabled)
     //{
+    <hr />
     <h4>@Html.ActionLink(item.CourseTitle, "Details", "Course", new { code = item.CourseCode }, new { })</h4>
     <p>
         @if (item.CourseDescription == null || item.CourseDescription == "")
@@ -22,47 +28,8 @@
             @Html.DisplayFor(modelItem => item.CourseDescription)
         }
     </p>
-    <p><mark>Fee: @Html.DisplayFor(modelItem => item.Fee) | Duration: @Html.DisplayFor(modelItem => item.NumberOfDays)</mark></p>
-       
-    <hr />
+    <p><strong>Fee: @Html.DisplayFor(modelItem => item.Fee) | Duration: @Html.DisplayFor(modelItem => item.NumberOfDays)</strong></p>
+    
     //}
 }
 
-@*<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CourseTitle)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CourseDescription)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fee)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumberOfDays)
-        </th>
-    </tr>
-
-@foreach (var item in Model)
-{
-    //if (item.enabled)
-    //{
-        <tr>
-            <td>
-                @Html.ActionLink(item.CourseTitle, "Details", "Course", new { code = item.CourseCode }, new { })
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CourseDescription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fee)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NumberOfDays)
-            </td>
-        </tr>
-    //}
-}
-
-</table>*@
