--- a/CourseRegistrationSystem/Views/Home/Index.cshtml
+++ b/CourseRegistrationSystem/Views/Home/Index.cshtml
@@ -73,9 +73,9 @@
         <p><a class="btn btn-default" href="~/Instructor">Instructor List &raquo;</a></p>
     </div>
 </div>
-
+<hr />
 <div>
-    <h3 class="text-primary">Upcoming Classes:</h3>
+    <h3>Upcoming Classes:</h3>
     @if (ViewBag.cList.Count == 0)
     {
         <p>There are no classes in recent three months.</p>
