individual user registration detail

--- a/CourseRegistrationSystem/Views/IndividualUser/RegistrationDetails.cshtml
+++ b/CourseRegistrationSystem/Views/IndividualUser/RegistrationDetails.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "RegistrationDetails";
 }
 
-<h2>RegistrationDetails</h2>
+<h2>RegistrationDetail</h2>
 
 <div>
     <h4>Registration</h4>
@@ -112,8 +112,9 @@
         <dd>
             @Html.DisplayFor(model => model.Status)
         </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "RegistrationList")
+    @Html.ActionLink("Back to List", "Index")
 </p>
