--- a/CourseRegistrationSystem/Views/Course/SearchResult.cshtml
+++ b/CourseRegistrationSystem/Views/Course/SearchResult.cshtml
@@ -4,12 +4,12 @@
     ViewBag.Title = "SearchResult";
 }
 
-<h2>Search <i><small>@Model.Count() results</small></i></h2>
+<h2>Search <i><small>@Model.Count() results about "@ViewBag.Search"</small></i></h2>
 
 @if (Model.Count() == 0)
 {
     <hr />
-    <p><i>Sorry, there is no any courses referred to @ViewBag.Search</i></p>
+    <p><i>Sorry, there is no any courses referred to "@ViewBag.Search".</i></p>
 }
 
 @foreach (var item in Model)
