--- a/CourseRegistrationSystem/Views/Class/RegisterClassForIU.cshtml
+++ b/CourseRegistrationSystem/Views/Class/RegisterClassForIU.cshtml
@@ -22,7 +22,16 @@
 <p>Duration: @Model.CourseClass.Course.NumberOfDays days</p>
 <p>Start Date: @Model.CourseClass.StartDate.ToString("yyyy-MM-dd") & End Date: @Model.CourseClass.EndDate.ToString("yyyy-MM-dd")</p>
 
-@using (Html.BeginForm())
+@if (ViewBag.Alert)
+{
+    <div class="alert alert-danger">You have already registered.</div>
+    <p>@Html.ActionLink("Back to List", "Index")</p>
+}
+else
+{
+    
+
+using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => Model.CourseClass.ClassId)
@@ -38,7 +47,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Participant.IdNumber, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Participant.IdNumber, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Participant.IdNumber, new { htmlAttributes = new { @class = "form-control", @readonly="readonly"} })
                         @Html.ValidationMessageFor(model => model.Participant.IdNumber, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -142,7 +151,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Participant.OrganizationSize, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EnumDropDownListFor(model => model.Participant.OrganizationSize, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EnumDropDownListFor(model => model.Participant.OrganizationSize, htmlAttributes : new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Participant.OrganizationSize, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -208,12 +217,13 @@
 
 <nav>
     <div class="pager">
-        @*<li class="previous"><a href="#"><span aria-hidden="true">&larr;</span> Previous</a></li>*@
+        <li class="previous">@Html.ActionLink("Back to List", "Index")</li>
         @*<li class="next"><a href="#">Register</a></li>*@
         <button class="btn btn-primary" style="float:right;" type="submit">Register Now</button>
     </div>
 </nav>
     
+}
 }
 
 @section Scripts {
