--- a/CourseRegistrationSystem/Views/Class/Details.cshtml
+++ b/CourseRegistrationSystem/Views/Class/Details.cshtml
@@ -10,7 +10,7 @@
     <li>@Html.DisplayFor(model => Model.ClassId)</li>
 </ul>
 
-<h2>@Model.ClassId Class <small>for @Model.Course.CourseTitle</small></h2>
+<h2>@Model.ClassId Class <small>@Model.Course.CourseTitle</small></h2>
 
 <div>
     <hr />
