--- a/CourseRegistrationSystem/Views/IndividualUser/RegistrationDetails.cshtml
+++ b/CourseRegistrationSystem/Views/IndividualUser/RegistrationDetails.cshtml
@@ -116,5 +116,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "RegistrationList")
 </p>
