--- a/CourseRegistrationSystem/Views/IndividualUser/RegistrationList.cshtml
+++ b/CourseRegistrationSystem/Views/IndividualUser/RegistrationList.cshtml
@@ -49,8 +49,8 @@
         </td>
 
         <td>
-            @Html.ActionLink("Details", "RegistrationDetails", new { id=item.RegistrationId }) |
-            @Html.ActionLink("Delete", "RegistrationDelete", new { id = item.RegistrationId })
+            @Html.ActionLink("Details", "RegistrationDetails", new { id=item.RegistrationId })
+            @*@Html.ActionLink("Delete", "RegistrationDelete", new { id = item.RegistrationId })*@
         </td>
     </tr>
 }
